Fix favicon caching and update metadata image paths

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <meta property="og:description"
     content="Orchestrate intelligent workflows with neqtra. The next generation of AI automation." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/attached_assets/opengraph.png" />
+  <meta property="og:image" content="/opengraph.jpg" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@neqtra" />
   <meta name="twitter:title" content="neqtra | AI Workflows" />
   <meta name="twitter:description"
     content="Orchestrate intelligent workflows with neqtra. The next generation of AI automation." />
-  <meta name="twitter:image" content="/attached_assets/opengraph.png" />
+  <meta name="twitter:image" content="/opengraph.jpg" />
 
-  <link rel="icon" type="image/png" href="/favicon.png?v=3" />
+  <link rel="icon" type="image/png" href="/favicon.png?v=4" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
