Update console logo and implement dynamic favicon switching

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     content="Orchestrate intelligent workflows with neqtra. The next generation of AI automation." />
   <meta name="twitter:image" content="/opengraph.jpg" />
 
-  <link rel="icon" type="image/png" href="/favicon.png?v=4" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
